Fix `ActivatedEnergyClientTest` w.r.t. Java 8